--- a/scss/main.scss
+++ b/scss/main.scss
@@ -156,15 +156,10 @@ main {
             #video {
                 margin-top: 200px;
                 text-align: center;
-                &iframe {
-                    width: 1320px;
-                    height: 740px;
-                }
-
-                img {
-                    // A changer une fois qu'on a la vidéo !
-                    width: 1320px;
-                    height: 740px;
+                iframe {
+                    border-radius: 15px;
+                    border: 1px solid #61269e;
+                    box-shadow: 0px 0px 10px 0px #61269e;
                 }
             }
 
