--- a/scss/main.scss
+++ b/scss/main.scss
@@ -158,8 +158,7 @@ main {
                 text-align: center;
                 iframe {
                     border-radius: 15px;
-                    border: 1px solid #61269e;
-                    box-shadow: 0px 0px 10px 0px #61269e;
+                    box-shadow: 0px 0px 10px 0px $mauve;
                 }
             }
 
