--- a/scss/main.scss
+++ b/scss/main.scss
@@ -184,6 +184,7 @@ main {
                         height: 379px;
                         border-radius: 50px;
                         object-fit: cover;
+                        object-position: center;
                     }
                     &.perso {
                         position: absolute;
