--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -5,7 +5,18 @@ footer {
     background-color: $violet;
     color: $blanc;
     justify-content: flex-end;
-
+    &:before {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 150px;
+        position: absolute;
+        top: -149px;
+        background-image: url("../img/forme-module-3-horizontale-footer.svg");
+        background-size: 120%;
+        background-position-x: center;
+        background-repeat: no-repeat;
+    }
     .vague {
         position: absolute;
         z-index: -1;
